[tool.poetry]
name = "pulumi-test"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pulumi = ">=2.0.0,<3.0.0"
pulumi-aws = ">=2.0.0,<3.0.0"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true }
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
